--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,15 +31,12 @@ body{
 }
 
 main{
-	 max-width: 1000px; 
-	 max-height: 800px; 
+	/* max-width: 1000px; */
+	/* max-height: 800px; */
 	
     display: grid;
-   /* grid-template-rows: 2fr 1fr 1fr; */
-   /* grid-template-columns: 6fr 4fr; */
-	
-      grid-template-rows: 200px 100px 100px;
-      grid-template-columns: 600px 400px;
+    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-columns: 6fr 4fr;
 	
     margin: 10px 0 10px 0;
 
@@ -55,10 +52,10 @@ main{
     margin-left: 30px;             /* */
     margin-top: 20px;             /* */
     margin-bottom: 20px;             /* */
-  width: 850px; /* 850px */ 
+/*  width: 850px;  850px */ 
 	
-   width: 60%;  /* */	
-   padding-top: 40%;  /* */
+ /*  width: 60%;   */	
+/*   padding-top: 40%;   */
 
 }
 
@@ -73,8 +70,8 @@ main{
     margin-top: 20px;             /* */
     margin-bottom: 10px;             /* */
 	
-	 width: 40%;  /* */	
-         padding-top: 40%;  /* */
+	/*  width: 40%;  */	
+       /*   padding-top: 40%;  */
 }
 .itemC{
     grid-row: 2 / 3;
@@ -82,13 +79,9 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
-   /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 10px;             /* */
-	
-	 width: 40%;  /* */	
-         padding-top: 40%;  /* */
 }
 .itemD{
     grid-row: 3 / 4;
@@ -96,13 +89,9 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
-   /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 20px;             /* */
-	
-	 width: 40%;  /* */	
-         padding-top: 40%;  /* */
 }
 
 .footer{
