--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
+    gap: 5px; 
    /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
@@ -79,6 +80,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
+    gap: 5px; 
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 10px;             /* */
@@ -89,6 +91,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
+    gap: 5px; 
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 20px;             /* */
