--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
-    gap: 5px; 
+    row-gap: 10px;
    /* width: 550px;  550px */ 
     margin-right: 30px;           /* */
     margin-top: 20px;             /* */
@@ -80,7 +80,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
-    gap: 5px; 
+    row-gap: 10px;
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 10px;             /* */
@@ -91,7 +91,7 @@ main{
     background-color: #888;
     text-align: center;
     color: #fff;
-    gap: 5px; 
+    row-gap: 10px; 
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 20px;             /* */
