--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,16 +35,16 @@ main{
 	/* max-height: 800px; */
 	
     display: grid;
-    grid-template-rows: 4fr 2fr 2fr; /* 2fr 1fr 1fr; */
-    grid-template-columns: 1fr 1fr; /* 6fr 4fr; */
+    grid-template-rows: 3fr 2fr 2fr; /* 2fr 1fr 1fr; 4fr 2fr 2fr */
+    grid-template-columns: 1.5fr 1fr; /* 1fr 1fr; 6fr 4fr; */
 	
     margin: 10px 0 10px 0;
 
 }
 
 .itemA {
-    grid-row: 1 / 8;
-    grid-column: 1 / 2;
+    grid-row: 1 / 7;
+    grid-column: 1 / 1.5;
     background-color: #eee;
 	
     text-align: center;
@@ -60,8 +60,8 @@ main{
 }
 
 .itemB{
-    grid-row: 1 / 4;
-    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -75,8 +75,8 @@ main{
        /*   padding-top: 40%;  */
 }
 .itemC{
-    grid-row: 4 / 6;
-    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+    grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -86,8 +86,8 @@ main{
     margin-bottom: 10px;             /* */
 }
 .itemD{
-    grid-row: 6 / 8;
-    grid-column: 2 / 3;
+    grid-row: 5 / 7;
+    grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
