--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,15 +35,15 @@ main{
 	/* max-height: 800px; */
 	
     display: grid;
-    grid-template-rows: 3fr 2fr 2fr; /* 2fr 1fr 1fr; 4fr 2fr 2fr */
-    grid-template-columns: 1.5fr 1fr; /* 1fr 1fr; 6fr 4fr; */
+    grid-template-rows: 7fr 3fr 3fr; /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
+    grid-template-columns: 1.5fr 1fr; /* 1fr 1fr; */
 	
     margin: 10px 0 10px 0;
 
 }
 
 .itemA {
-    grid-row: 1 / 7;
+    grid-row: 1 / 13; /* 1 / 7; */
     grid-column: 1 / 1.5;
     background-color: #eee;
 	
@@ -60,7 +60,7 @@ main{
 }
 
 .itemB{
-    grid-row: 1 / 3;
+    grid-row: 1 / 7; /* 1 / 3; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
@@ -75,18 +75,18 @@ main{
        /*   padding-top: 40%;  */
 }
 .itemC{
-    grid-row: 3 / 5;
+    grid-row: 7 / 10; /* 3 / 5; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
-    row-gap: 10px;
+    row-gap: 8px; /* 10px */
     margin-right: 30px;           /* */
     margin-top: 10px;             /* */
     margin-bottom: 10px;             /* */
 }
 .itemD{
-    grid-row: 5 / 7;
+    grid-row: 10 / 13; /* 5 / 7; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
