--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ main{
 	/* max-height: 800px; */
 	
     display: grid;
-    grid-template-rows: 4fr 3fr 3fr; /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
+    grid-template-rows: 3fr 1fr 1fr; /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
     grid-template-columns: 1.5fr 1fr; /* 1fr 1fr; */
 	
     margin: 10px 0 10px 0;
@@ -43,7 +43,7 @@ main{
 }
 
 .itemA {
-    grid-row: 1 / 10; /* 1 / 7; */
+    grid-row: 1 / 5; /* 1 / 7; */
     grid-column: 1 / 1.5;
     background-color: #eee;
 	
@@ -60,7 +60,7 @@ main{
 }
 
 .itemB{
-    grid-row: 1 / 4; /* 1 / 3; */
+    grid-row: 1 / 3; /* 1 / 3; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
@@ -75,7 +75,7 @@ main{
        /*   padding-top: 40%;  */
 }
 .itemC{
-    grid-row: 4 / 7; /* 3 / 5; */
+    grid-row: 3 / 4; /* 3 / 5; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
@@ -86,7 +86,7 @@ main{
     margin-bottom: 10px;             /* */
 }
 .itemD{
-    grid-row: 7 / 10; /* 5 / 7; */
+    grid-row: 4 / 5; /* 5 / 7; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
@@ -98,7 +98,7 @@ main{
 }
 
 .footer{
-    height: 165px; /* 70px 140px */
+    height: 70px; /* 165px 70px 140px */
     text-align: center;
     background-color: #eee;
 }
