--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,26 +33,36 @@ body{
 main{
 	/* max-width: 1000px; */
 	/* max-height: 800px; */
+
+    	width: 100vw; /* */
+	height:100vw; /* */
+	margin:30px auto; /* */
+	grid-gap:20px; /* */
 	
     display: grid;
-    grid-template-rows: 3fr 1fr 1fr; /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
-    grid-template-columns: 1.5fr 1fr; /* 1fr 1fr; */
+    grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px);  
+    grid-template-columns: calc(75vw - 20px) calc(25vw - 20px);
 	
-    margin: 10px 0 10px 0;
+    /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
+   /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
+	
+   /* margin: 10px 0 10px 0; */
 
 }
 
 .itemA {
+	
+    padding: 20px; /* */
     grid-row: 1 / 5; /* 1 / 7; */
     grid-column: 1 / 1.5;
     background-color: #eee;
-	
+    
     text-align: center;
-    margin-right: 10px;
-    margin-left: 30px;             /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-/*  width: 850px;  850px */ 
+ /*   margin-right: 10px; */
+ /*   margin-left: 30px;   */         /* */
+ /*   margin-top: 20px;   */          /* */
+ /*   margin-bottom: 20px;  */           /* */
+/*  width: 850px;  850px */  /* 元々なし */
 	
  /*  width: 60%;   */	
 /*   padding-top: 40%;   */
@@ -60,41 +70,47 @@ main{
 }
 
 .itemB{
+	
+    padding: 20px; /* */
     grid-row: 1 / 3; /* 1 / 3; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 10px;
-   /* width: 550px;  550px */ 
-    margin-right: 30px;           /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 10px;             /* */
+   /* width: 550px;  550px */  /* 元々なし */
+  /*  margin-right: 30px;   */        /* */
+  /*  margin-top: 20px;   */          /* */
+  /*  margin-bottom: 10px;   */          /* */
 	
 	/*  width: 40%;  */	
        /*   padding-top: 40%;  */
 }
 .itemC{
+	
+    padding: 20px; /* */
     grid-row: 3 / 4; /* 3 / 5; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 8px; /* 10px */
-    margin-right: 30px;           /* */
-    margin-top: 10px;             /* */
-    margin-bottom: 10px;             /* */
+ /*    margin-right: 30px;    */       /* */
+ /*    margin-top: 10px;  */           /* */
+ /*    margin-bottom: 10px; */            /* */
 }
 .itemD{
+	
+    padding: 20px; /* */	
     grid-row: 4 / 5; /* 5 / 7; */
     grid-column: 1.5 / 2;
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 10px; 
-    margin-right: 30px;           /* */
-    margin-top: 10px;             /* */
-    margin-bottom: 20px;             /* */
+/*    margin-right: 30px; */          /* */
+ /*   margin-top: 10px;   */          /* */
+ /*   margin-bottom: 20px;  */           /* */
 }
 
 .footer{
