--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,8 +53,8 @@ main{
 .itemA {
 	
     padding: 20px; /* */
-    grid-row: 1 / 5; /* 1 / 7; */
-    grid-column: 1 / 1.5;
+   /* grid-row: 1 / 5; */ /* 1 / 7; */
+   /* grid-column: 1 / 1.5; */
     background-color: #eee;
     
     text-align: center;
@@ -72,8 +72,8 @@ main{
 .itemB{
 	
     padding: 20px; /* */
-    grid-row: 1 / 3; /* 1 / 3; */
-    grid-column: 1.5 / 2;
+  /*   grid-row: 1 / 3; */ /* 1 / 3; */
+  /*   grid-column: 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -89,8 +89,8 @@ main{
 .itemC{
 	
     padding: 20px; /* */
-    grid-row: 3 / 4; /* 3 / 5; */
-    grid-column: 1.5 / 2;
+   /* grid-row: 3 / 4; */ /* 3 / 5; */
+   /* grid-column: 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -102,8 +102,8 @@ main{
 .itemD{
 	
     padding: 20px; /* */	
-    grid-row: 4 / 5; /* 5 / 7; */
-    grid-column: 1.5 / 2;
+   /* grid-row: 4 / 5; */ /* 5 / 7; */
+   /* grid-column: 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
