--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,8 +40,8 @@ main{
 	grid-gap:20px; /* */
 	
     display: grid;
-    grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px);  
-    grid-template-columns: calc(75vw - 20px) calc(25vw - 20px);
+    grid-template-rows: calc(20vw - 5px) calc(20vw - 5px) calc(20vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
+    grid-template-columns: calc(50vw - 5px) calc(30vw - 5px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
@@ -52,7 +52,7 @@ main{
 
 .itemA {
 	
-    padding: 20px; /* */
+    padding: 10px; /* 20px */
    /* grid-row: 1 / 5; */ /* 1 / 7; */
    /* grid-column: 1 / 1.5; */
     background-color: #eee;
@@ -71,7 +71,7 @@ main{
 
 .itemB{
 	
-    padding: 20px; /* */
+    padding: 10px; /* 20px */
   /*   grid-row: 1 / 3; */ /* 1 / 3; */
   /*   grid-column: 1.5 / 2; */
     background-color: #888;
@@ -88,7 +88,7 @@ main{
 }
 .itemC{
 	
-    padding: 20px; /* */
+    padding: 10px; /* 20px */
    /* grid-row: 3 / 4; */ /* 3 / 5; */
    /* grid-column: 1.5 / 2; */
     background-color: #888;
@@ -101,7 +101,7 @@ main{
 }
 .itemD{
 	
-    padding: 20px; /* */	
+    padding: 10px; /* 20px */	
    /* grid-row: 4 / 5; */ /* 5 / 7; */
    /* grid-column: 1.5 / 2; */
     background-color: #888;
