--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,17 +36,17 @@ main{
 
     	width: 100vw; /* */
 	height:100vw; /* */
-	/*　margin:30px auto;  */
+	　margin:2px auto; /* margin:30px auto; */
 	grid-gap:20px; /* */
 	
     display: grid;
-    grid-template-rows: calc(20vw - 5px) calc(20vw - 5px) calc(20vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
-    grid-template-columns: calc(50vw - 5px) calc(30vw - 5px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
+    grid-template-rows: calc(20vw - 10px) calc(10vw - 10px) calc(10vw - 10px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
+    grid-template-columns: calc(50vw - 10px) calc(30vw - 10px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
 	
-    margin: 10px 0 10px 0;
+   /*　 margin: 10px 0 10px 0; */
 
 }
 
