--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,10 +58,10 @@ main{
     background-color: #eee;
     
     text-align: center;
- /*   margin-right: 10px; */
- /*   margin-left: 30px;   */         /* */
- /*   margin-top: 20px;   */          /* */
- /*   margin-bottom: 20px;  */           /* */
+    margin-right: 10px; 
+    margin-left: 30px;            /* */
+    margin-top: 20px;             /* */
+    margin-bottom: 20px;             /* */
 /*  width: 850px;  850px */  /* 元々なし */
 	
  /*  width: 60%;   */	
@@ -72,16 +72,16 @@ main{
 .itemB{
 	
     padding: 10px; /* 20px */
-  /*   grid-row: 1 / 3; */ /* 1 / 3; */
-  /*   grid-column: 1.5 / 2; */
+     grid-row: 1 / 3;  /* 1 / 3; */
+     grid-column: 1.5 / 2; 
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 10px;
    /* width: 550px;  550px */  /* 元々なし */
-  /*  margin-right: 30px;   */        /* */
-  /*  margin-top: 20px;   */          /* */
-  /*  margin-bottom: 10px;   */          /* */
+    margin-right: 30px;           /* */
+    margin-top: 20px;             /* */
+    margin-bottom: 10px;             /* */
 	
 	/*  width: 40%;  */	
        /*   padding-top: 40%;  */
@@ -89,28 +89,28 @@ main{
 .itemC{
 	
     padding: 10px; /* 20px */
-   /* grid-row: 3 / 4; */ /* 3 / 5; */
-   /* grid-column: 1.5 / 2; */
+    grid-row: 3 / 4;  /* 3 / 5; */
+    grid-column: 1.5 / 2; 
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 8px; /* 10px */
- /*    margin-right: 30px;    */       /* */
- /*    margin-top: 10px;  */           /* */
- /*    margin-bottom: 10px; */            /* */
+    margin-right: 30px;          /* */
+    margin-top: 10px;            /* */
+     margin-bottom: 10px;             /* */
 }
 .itemD{
 	
     padding: 10px; /* 20px */	
-   /* grid-row: 4 / 5; */ /* 5 / 7; */
-   /* grid-column: 1.5 / 2; */
+    grid-row: 4 / 5;  /* 5 / 7; */
+    grid-column: 1.5 / 2; 
     background-color: #888;
     text-align: center;
     color: #fff;
     row-gap: 10px; 
-/*    margin-right: 30px; */          /* */
- /*   margin-top: 10px;   */          /* */
- /*   margin-bottom: 20px;  */           /* */
+    margin-right: 30px;          /* */
+  margin-top: 10px;            /* */
+  margin-bottom: 20px;             /* */
 }
 
 .footer{
