--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,8 +40,9 @@ main{
 	grid-gap:20px; /* */
 	
     display: grid;
-    grid-template-rows: calc(20vw - 10px) calc(10vw - 10px) calc(10vw - 10px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
-    grid-template-columns: calc(50vw - 10px) calc(30vw - 10px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
+    grid-template-rows: calc(20vw - 20px) calc(10vw - 20px) calc(10vw - 20px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
+    grid-template-columns: calc(50vw - 20px) calc(30vw - 20px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
+	/* 10 -> 20 */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
