--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,8 +31,8 @@ body{
 }
 
 main{
-	/* max-width: 1000px; */
-	/* max-height: 800px; */
+	 max-width: 1000px; 
+	 max-height: 800px; 
 
     	width: 100vw; /* */
 	height:100vw; /* */
@@ -40,7 +40,7 @@ main{
 	grid-gap:20px; /* */
 	
     display: grid;
-    grid-template-rows: calc(20vw - 20px) calc(10vw - 20px) calc(10vw - 20px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
+    grid-template-rows: calc(20vw - 5px) calc(10vw - 5px) calc(10vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
     grid-template-columns: calc(50vw - 20px) calc(30vw - 20px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
 	/* 10 -> 20 */
 	
