--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,18 +31,19 @@ body{
 }
 
 main{
-	 max-width: 1000px; 
-	 max-height: 800px; 
+	 max-width: 1000px;
+	 max-height: 800px;
 
     	width: 100vw; /* */
-	height:100vw; /* */
-	　margin:2px auto; /* margin:30px auto; */
-	grid-gap:20px; /* */
+	height: 80vh; /* 100vh; */
+	　margin: 2px auto; /* margin:30px auto; */
+	grid-gap: 10px; /* 20px */
 	
     display: grid;
-    grid-template-rows: calc(20vw - 5px) calc(10vw - 5px) calc(10vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
-    grid-template-columns: calc(50vw - 20px) calc(30vw - 20px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
-	/* 10 -> 20 */
+    grid-template-rows: calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
+    grid-template-columns: calc(60vw - 20px) calc(40vw - 20px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
+	/* -rows : calc(20vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */
+	/* -columns: calc(50vw - 20px) calc(30vw - 20px); */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
