--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,15 +35,13 @@ main{
 	 max-height: 800px;
 
     	width: 100vw; /* */
-	height: 80vh; /* 100vh; */
+	height: 100vh; /* x 80vh; (縮小時にheaderがmain領域に乗る) */
 	　margin: 2px auto; /* margin:30px auto; */
 	grid-gap: 10px; /* 20px */
 	
     display: grid;
-    grid-template-rows: calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); /* grid-template-rows: calc(20vw - 20px) calc(20vw - 20px) calc(20vw - 20px); */  
-    grid-template-columns: calc(60vw - 20px) calc(40vw - 20px); /* grid-template-columns: calc(75vw - 20px) calc(25vw - 20px); */
-	/* -rows : calc(20vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */
-	/* -columns: calc(50vw - 20px) calc(30vw - 20px); */
+    grid-template-rows: calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); /* calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */  
+    grid-template-columns: calc(60vw - 5px) calc(40vw - 5px); /* calc(60vw - 5px) calc(40vw - 20px); */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
@@ -55,8 +53,8 @@ main{
 .itemA {
 	
     padding: 10px; /* 20px */
-    grid-row: 1 / 5;  /* 1 / 7; */
-    grid-column: 1 / 1.5; 
+    grid-row: 1 / 4;  /* 1 / 5; */
+    grid-column: 1 / 2; /* 1 / 1.5; */
     background-color: #eee;
     
     text-align: center;
@@ -74,8 +72,8 @@ main{
 .itemB{
 	
     padding: 10px; /* 20px */
-     grid-row: 1 / 3;  /* 1 / 3; */
-     grid-column: 1.5 / 2; 
+     grid-row: 1 / 2;  /* 1 / 3; */
+     grid-column: 2 / 3; /* 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -91,8 +89,8 @@ main{
 .itemC{
 	
     padding: 10px; /* 20px */
-    grid-row: 3 / 4;  /* 3 / 5; */
-    grid-column: 1.5 / 2; 
+    grid-row: 2 / 3;  /* 3 / 4; */
+    grid-column: 2 / 3; /* 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
@@ -104,8 +102,8 @@ main{
 .itemD{
 	
     padding: 10px; /* 20px */	
-    grid-row: 4 / 5;  /* 5 / 7; */
-    grid-column: 1.5 / 2; 
+    grid-row: 3 / 4;  /* 4 / 5; */
+    grid-column: 2 / 3; /* 1.5 / 2; */
     background-color: #888;
     text-align: center;
     color: #fff;
