--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ main{
 	grid-gap: 10px; /* 20px */
 	
     display: grid;
-    grid-template-rows: calc(40vh - 5px) calc(20vh - 5px) calc(20vh - 5px); /* calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */  
+    grid-template-rows: calc(40vw - 5px) calc(20vw - 5px) calc(20vw - 5px); /* calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */  
     grid-template-columns: calc(60vw - 5px) calc(40vw - 5px); /* calc(60vw - 5px) calc(40vw - 20px); */
 	
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
