--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,7 @@ main{
     /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
    /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
 	
-    margin: 10px 0 10px 0; /* ? */
+    margin: 10px 0 20px 0; /* [上][右][下][左] */
 
 }
 
