--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,92 +32,34 @@ body{
 }
 
 main{
-	 max-width: 1000px;
-	 max-height: 600px; /* 800px */
+	 width: 1000px;
+	 height: 800px;
 
-    	width: 100vw; /* */
-	 height: 100%;  /* 100vh? x 80vh; (縮小時にheaderがmain領域に乗る) */
-	　margin: 2px auto; /* margin:30px auto; */
-	grid-gap: 10px; /* 20px */
-	
-    display: grid;
-    grid-template-rows: calc(40vw - 5px) calc(20vw - 5px) calc(20vw - 5px); /* calc(40vw - 5px) calc(10vw - 5px) calc(10vw - 5px); */  
-    grid-template-columns: calc(60vw - 5px) calc(40vw - 5px); /* calc(60vw - 5px) calc(40vw - 20px); */
-	
-    /* grid-template-rows: 3fr 1fr 1fr; */ /* 3fr 2fr 2fr; 2fr 1fr 1fr; */
-   /*  grid-template-columns: 1.5fr 1fr; */ /* 1fr 1fr; */
-	
-    margin: 10px 0 20px 0; /* [上][右][下][左] */
+    	/* width: 100vw;  */
+	/* height: 100%;   100vh? x 80vh; (縮小時にheaderがmain領域に乗る) */
+	/* margin: 2px auto; */ /* margin:30px auto; */
+	/* grid-gap: 10px; */ /* 20px */
+
 
 }
 
 .itemA {
 	
-    padding: 10px; /* 20px */
-    grid-row: 1 / 4;  /* 1 / 5; */
-    grid-column: 1 / 2; /* 1 / 1.5; */
-    background-color: #eee;
-    
-    text-align: center;
-    margin-right: 10px; 
-    margin-left: 30px;            /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
-/*  width: 850px;  850px */  /* 元々なし */
-	
- /*  width: 60%;   */	
-/*   padding-top: 40%;   */
-
 }
 
 .itemB{
 	
-    padding: 10px; /* 20px */
-     grid-row: 1 / 2;  /* 1 / 3; */
-     grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px;
-   /* width: 550px;  550px */  /* 元々なし */
-    margin-right: 30px;           /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 10px;             /* */
-	
-	/*  width: 40%;  */	
-       /*   padding-top: 40%;  */
 }
 .itemC{
 	
-    padding: 10px; /* 20px */
-    grid-row: 2 / 3;  /* 3 / 4; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 8px; /* 10px */
-    margin-right: 30px;          /* */
-    margin-top: 10px;            /* */
-     margin-bottom: 10px;             /* */
 }
 .itemD{
-	
-    padding: 10px; /* 20px */	
-    grid-row: 3 / 4;  /* 4 / 5; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px; 
-    margin-right: 30px;          /* */
-  margin-top: 10px;            /* */
-  margin-bottom: 20px;             /* */
+
 }
 
 .footer{
-    height: 165px; /* 165px (70px) 140px */
+    height: 70px; /* 165px (70px) 140px */
     text-align: center;
     background-color: #eee;
     margin: 10px 0 10px 0; /* */
-
 }
