--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,9 +37,11 @@ main{
 
     	/* width: 100vw;  */
 	/* height: 100%;   100vh? x 80vh; (縮小時にheaderがmain領域に乗る) */
-	/* margin: 2px auto; */ /* margin:30px auto; */
-	/* grid-gap: 10px; */ /* 20px */
-
+	 margin: 2px auto;  /* margin:30px auto; */
+	 grid-gap: 10px;  /* 20px */
+    display: grid;
+    grid-template-rows: calc(40vw - 5px) calc(20vw - 5px) calc(20vw - 5px);
+    grid-template-columns: calc(60vw - 5px) calc(40vw - 5px);
 
 }
 
