--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,17 +46,17 @@ main{
 }
 
 .itemA {
-	
+background-color: #eee;	
 }
 
 .itemB{
-	
+background-color: #888;	
 }
 .itemC{
-	
+background-color: #888;	
 }
 .itemD{
-
+background-color: #888;
 }
 
 .footer{
