--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,8 +32,8 @@ body{
 }
 
 main{
-	 width: 1000px;
-	 height: 800px;
+	/* width: 1000px; */
+	/* height: 800px; */
 
     	width: 100vw;
 	height: 100vw;  /* 100vh? x 80vh; (縮小時にheaderがmain領域に乗る) */
