--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,60 +33,24 @@ body{
 }
 
 main{
-	width: 100vw;
-	    display: grid;
-    grid-template-rows: calc(40vw - 5px) calc(20vw - 5px) calc(20vw - 5px);
-    grid-template-columns: calc(60vw - 5px) calc(40vw - 5px);
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 
 .itemA {
-    padding: 10px; /* 20px */
-    grid-row: 1 / 4;  /* 1 / 5; */
-    grid-column: 1 / 2; /* 1 / 1.5; */
-    background-color: #eee;
-    
-    text-align: center;
-    margin-right: 10px; 
-    margin-left: 30px;            /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 20px;             /* */
+  grid-area: 1 / 2 / span 2 / auto;
+  height: 250px;
 }
 
 .itemB{
-    padding: 10px; /* 20px */
-     grid-row: 1 / 2;  /* 1 / 3; */
-     grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px;
-    margin-right: 30px;           /* */
-    margin-top: 20px;             /* */
-    margin-bottom: 10px;             /* */
+    
 }
 .itemC{
-    padding: 10px; /* 20px */
-    grid-row: 2 / 3;  /* 3 / 4; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 8px; /* 10px */
-    margin-right: 30px;          /* */
-    margin-top: 10px;            /* */
-     margin-bottom: 10px;             /* */
+
 }
 .itemD{
-    padding: 10px; /* 20px */	
-    grid-row: 3 / 4;  /* 4 / 5; */
-    grid-column: 2 / 3; /* 1.5 / 2; */
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    row-gap: 10px; 
-    margin-right: 30px;          /* */
-  margin-top: 10px;            /* */
-  margin-bottom: 20px;             /* */
+
 }
 
 .footer{
