--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,21 +40,26 @@ main{
 
 .itemA {
  grid-area: 1 / 1;
+ background-color: #eee;
 }
 
 .itemB{
  grid-area: 3 / 1;
+ background-color: #888;
 }
 .itemC{
 grid-area: 2 / 1;
-  align-self: start;
+align-self: start;
+background-color: #888;
 }
 .itemD{
 grid-area: 1 / 2 / span 2 / auto;
-  height: 250px;
+height: 250px;
+background-color: #888;
 }
 .itemE{
  grid-area: 3 / 2;
+ background-color: #888;
 }	
 	
 .footer{
