--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,11 @@ main{
   display: grid; /* main領域をgridレイアウトにする */
   grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
 	grid-template-columns: 62.5vw 37.5vw; /* 2列 */
+
+  /* 追加.. 余白*/
+margin: 2px auto;
+grid-gap: 10px;
+	
 }
 
 .itemA {
