--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,23 +40,29 @@ main{
   /* 追加.. 余白*/
 margin: 2px auto;
 grid-gap: 10px;
-margin: 10px 0 10px 0; /* [上][右][下][左] */
-	
 }
 
 .itemA {
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
+ text-align: center;
+ margin-left: 10px; /* */
 }
 
 .itemB{
  background-color: #888;
+ text-align: center;
+ margin-right: 10px; /* */
 }
 .itemC{
 background-color: #888;
+text-align: center;
+margin-right: 10px; /* */
 }
 .itemD{
 background-color: #888;
+text-align: center;
+margin-right: 10px; /* */
 }
 
 .footer{
