--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body{
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0; /* */
+    margin: 10px; /* */
 }
 
 .nav{
@@ -70,5 +70,5 @@ margin-right: 10px; /* */
     wigth: 100%;
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0; /* */
+    margin: 10px; /* */
 }
