--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 body{
     display: flex;
     flex-direction: column;
-    margin: 0; /* */
+   /* margin: 0;  */
 }
 
 .header{
@@ -14,7 +14,7 @@ body{
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    margin: 10px; /* */
+    margin: 2px auto; /* */
 }
 
 .nav{
@@ -70,5 +70,5 @@ margin-right: 10px; /* */
     wigth: 100%;
     text-align: center;
     background-color: #eee;
-    margin: 10px; /* */
+    margin: 2px auto; /* */
 }
