--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,8 @@ main{
   grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
 	grid-template-columns: 62.5vw 37.5vw; /* 2列　*/
 wigth: 100%;
-	
+box-sizing: border-box;
+
   /* 追加.. 余白*/
 /* margin: 2px auto; */
 grid-gap: 10px;
