--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,17 +54,20 @@ grid-gap: 10px;
 .itemB{
  background-color: #888;
  text-align: center;
- margin-right: 10px; /* */
+/* margin-right: 10px;  */
+	right: 10px;
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 10px; /* */
+/* margin-right: 10px;  */
+	right: 10px;
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 10px; /* */
+/* margin-right: 10px;  */
+	right: 10px;
 }
 
 .footer{
