--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,8 @@ body{
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0;
+    /* margin: 10px 0 10px 0; */
+    margin: 0 auto;
 }
 
 .nav{
@@ -75,5 +76,6 @@ margin-right: 10px;
     wigth: 100%;
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0;
+ /* margin: 10px 0 10px 0; */
+    margin: 0 auto; 	
 }
