--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,8 +14,7 @@ body{
     font-size: 30px;  /* 25px */
     text-align: center;
     background-color: #eee;
-    /* margin: 10px 0 10px 0; */
-    margin: 0 auto;
+    margin: 10px 0 10px 0;
 }
 
 .nav{
@@ -76,6 +75,5 @@ margin-right: 10px;
     wigth: 100%;
     text-align: center;
     background-color: #eee;
- /* margin: 10px 0 10px 0; */
-    margin: 0 auto; 	
+    margin: 10px 0 10px 0;
 }
