--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,9 @@
 body{
     display: flex;
     flex-direction: column;
-   /* margin: 0; */
-}
+    margin: 0; /* default 8px? */
+    margin-right: 0; /* */
+ }
 
 .header{
     height: 100px;  /* 70px */
