--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0; /* default 8px? */
-    /* margin-right: 0; */
+    margin-right: 0;
  }
 
 .header{
