--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,19 +55,19 @@ grid-gap: 10px;
 .itemB{
  background-color: #888;
  text-align: center;
-margin-right: 30px;  
+margin-right: 20px;  
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 30px;
+margin-right: 20px;
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 30px;
+margin-right: 20px;
 	/* right: 10px; */
 }
 
@@ -77,4 +77,5 @@ margin-right: 30px;
     text-align: center;
     background-color: #eee;
     margin: 10px 0 10px 0; /* margin: 10px 0 10px 0; */
+    margin-bottom: 0; /* */ 
 }
