--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,7 +55,7 @@ grid-gap: 10px;
 .itemB{
  background-color: #888;
  text-align: center;
-margin-right: 20px;  
+margin-right: 20px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
@@ -76,6 +76,6 @@ margin-right: 20px;
     /*　width: 100%;　*/ 
     text-align: center;
     background-color: #eee;
-    margin: 10px 0 10px 0; /* margin: 10px 0 10px 0; */
+    margin: 10px 0 10px 0;
     margin-bottom: 0; /* */ 
 }
