--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,7 @@ main{
 
   /* 追加.. 余白 */
 /* margin: 2px auto; */
+margin: 2px 10px;
 grid-gap: 10px;
 }
 
@@ -49,25 +50,25 @@ grid-gap: 10px;
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
- margin-left: 10px; /* */
+/*  margin-left: 10px; */
 }
 
 .itemB{
  background-color: #888;
  text-align: center;
-margin-right: 20px; /* 30pxだと右の余白が空きすぎる */
+/* margin-right: 20px;  30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 20px;
+/* margin-right: 20px; */
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 20px;
+/* margin-right: 20px; */
 	/* right: 10px; */
 }
 
