--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ body{
 main{
   display: grid; /* main領域をgridレイアウトにする */
   grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
-	grid-template-columns: 62.5vw 34.5vw; /* 2列 37.5vwは画面拡大時にはみ出る　30.5vwは完全に小さすぎ */
+	grid-template-columns: 62.5vw 36.5vw; /* 2列 37.5vwは画面拡大時にはみ出る　30.5vw,34.5vwは完全に小さすぎ */
 /*　width: 100%;　*/ 
 /*　box-sizing: border-box;  */ 
 
