--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ grid-gap: 10px;
 }
 
 .itemB{
- background-color: #eee; /* #888 試し */
+ background-color: #eee; /* #888 check */
  text-align: center;
 margin-right: 20px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
