--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ body{
 main{
   display: grid; /* main領域をgridレイアウトにする */
   grid-template-rows: 25vw 6.25vw 6.25vw; /* 3行 */
-	grid-template-columns: 62.5vw 35.5vw; /* 2列 35.5 */
+	grid-template-columns: 62.5vw 36.5vw; /* 2列 35.5 */
 /*　width: 100%;　*/ 
 /*　box-sizing: border-box;  */ 
 
@@ -53,7 +53,7 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
 margin-right: 20px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
