--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ grid-gap: 10px;
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
- margin-left: 10px; /* */
+ margin-left: 0; /* 10px */
 }
 
 .itemB{
