--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,11 +49,11 @@ grid-gap: 10px;
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
- margin-left: 2px; /* 10px */
+ margin-left: 5px; /* 10px 2px */
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
 margin-right: 15px; /* 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
