--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,25 +49,25 @@ grid-gap: 10px;
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
- margin-left: 12px; /* 10px 2px 5px */
+ margin-left: 10px; /* 10px 2px 5px */
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
-margin-right: 11px; /* 15px 30pxだと右の余白が空きすぎる */
+margin-right: 10px; /* 15px 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 11px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 11px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 
