--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@ body{
     text-align: center;
     background-color: #eee;
     margin: 10px 0 5px 0;
+    margin-right: 0; /* */
 }
 
 .nav{
@@ -53,21 +54,21 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #888; /* #888 check */
+background-color: #eee; /* #888 check */
  text-align: center;
-margin-right: 15px; /* 15px 30pxだと右の余白が空きすぎる */
+margin-right: 10px; /* 15px 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 .itemC{
 background-color: #888;
 text-align: center;
-margin-right: 15px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 .itemD{
 background-color: #888;
 text-align: center;
-margin-right: 15px;
+margin-right: 10px;
 	/* right: 10px; */
 }
 
@@ -78,4 +79,5 @@ margin-right: 15px;
     background-color: #eee;
     margin: 10px 0 10px 0;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
+    margin-right: 0; /* */
 }
