--- a/stylesheet_c01_aim.css
+++ b/stylesheet_c01_aim.css
@@ -40,6 +40,11 @@ body{
   color: white; /* リンクの色を指定 */
   text-decoration: none; /* リンクの下線を非表示 */
 }
+.header a{
+  color: black; /* リンクの色を指定 */
+  text-decoration: none; /* リンクの下線を非表示 */
+}
+
 
 
 main{
