--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,11 @@ margin-right: 5px;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
 .Introduction{
-margin: 0 0 0 auto;
+margin: 0 0 15 auto;
+}
+.intro_title p{
+    text-align: left;
+    font-size: 14px;
 }
 .intro_sentence p{
     text-align: left;
