--- a/stylesheet_c01_aim.css
+++ b/stylesheet_c01_aim.css
@@ -33,7 +33,7 @@ body{
 .header-list li {
 	font-size: 16px; /* 17px 15px 18px 4vh */
 	display: inline; /* リスト要素を縦から横並びに変換する */
-        padding: 35px 40px 20px 20px; 余白: [上][右][下][左] /*  padding: 35px 40px  padding: 35px 40px 20px 20px; */
+        padding: 35px 40px 20px 20px; /* 余白: [上][右][下][左] padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
 .header-list li a {
