--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,7 +84,7 @@ font-size: 14px;
 .itemC diary_link a{
   color: black;
 }
-.itemC diary_archives a{
+.itemC diary_archive_link a{
   color: black;
   text-decoration: none;
 }
