--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,9 +116,9 @@ margin-left: auto;
 margin-right: 30px;
 }
 
-.footer intro_title p{
+.footer intro_box h3{
     font-size: 10px;
 }
-.footer intro_sentence p{
+.footer intro_box p{
     font-size: 8px;
 }
