--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -31,7 +31,7 @@ body{
 	padding-left: 0;
 }
 .header-list li {
-	font-size: 16px; /* 17px 15px 18px 4vh */
+	font-size: 18px; /* 16px */
 	display: inline; /* リスト要素を縦から横並びに変換する */
         padding: 35px 40px 20px 20px; /* 余白: [上][右][下][左] padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
@@ -48,17 +48,17 @@ justify-content: flex-start; /* 要素(文)を左寄せで配置 */
 }
 
 .h1 {
-font-size: 24px;
+font-size: 18px;
 line-height: 1; /* 2 */
 }
 
 .h2 {
-font-size: 20px;
+font-size: 14px;
 line-height: 1;
 }
 
 .diary_sent p{
-font-size: 14px;
+font-size: 12px;
 line-height: 0.8; /* 1.5 */
 }
 
