--- a/stylesheet_c01_aim.css
+++ b/stylesheet_c01_aim.css
@@ -52,9 +52,11 @@ main{
 
 .aim-list li {
 line-height: 1.5;
+list-style-type: disc;
 }
 .task-list li {
 line-height: 1.5;
+list-style-type: disc;
 }
 
 
