--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,9 +112,9 @@ margin-right: 5px;
 
 .intro_box{
 display: flex;
-/* flex-direction: column; 要素(文)を縦に配置  flex-flow: column; */
-/* justify-content: flex-start; 要素(文)を左寄せで配置 */
-margin: 0 0 0 auto;
+flex-direction: column; 要素(文)を縦に配置  flex-flow: column;
+justify-content: flex-start; 要素(文)を左寄せで配置
+margin: 0 0 0 100px;
 }
 
 .intro_box h3{
